# passenger_transportation

./: .gitignore  docker-compose.yml  pyproject.toml
app/: .env_example  main.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 0a69912ebc11_2_create_users_table.py  b76ed37268be_3_make_phone_colunm_unique.py  df20afa8069a_create_requests_table.py
app/api/: __init__.py  dependencies.py
app/api/dependencies/: auth.py
app/api/v1/: __init__.py  auth.py  items.py  requests.py  users.py
app/core/: types.py
app/core/auth/: utils.py
app/core/models/: __init__.py  base.py  db_helper.py  requests.py  test.py  users.py
app/core/models/mixins/: int_pk_mixin.py
app/core/schemas/: requests.py  users.py
app/crud/: requests.py  users.py
