[project]
name = "passenger-transportation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.117.1",
    "jwt>=1.4.0",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
